// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should resolve .ts first 1`] = `
"\\"use strict\\";
var __webpack_exports__ = {};

;// CONCATENATED MODULE: ./src/bar.js
const bar = 'bar';

;// CONCATENATED MODULE: ./src/foo.ts
const foo = 'foo';

;// CONCATENATED MODULE: ./src/index.ts
// Relative import paths need explicit file extensions in ECMAScript imports
// when '--moduleResolution' is 'node16' or 'nodenext'.


console.log(foo + bar);

var __webpack_export_target__ = exports;
for(var i in __webpack_exports__) __webpack_export_target__[i] = __webpack_exports__[i];
if(__webpack_exports__.__esModule) Object.defineProperty(__webpack_export_target__, '__esModule', { value: true });
"
`;

exports[`should resolve .ts first 2`] = `
"
;// CONCATENATED MODULE: ./src/bar.js
const bar = 'bar';

;// CONCATENATED MODULE: ./src/foo.ts
const foo = 'foo';

;// CONCATENATED MODULE: ./src/index.ts
// Relative import paths need explicit file extensions in ECMAScript imports
// when '--moduleResolution' is 'node16' or 'nodenext'.


console.log(foo + bar);

"
`;
